Bug 1414237 - Remove bogus styles from listbox.css on Linux. r=johannh
There's a bunch of borders that aren't used because of -moz-appearance, and listheader have extra padding that shouldn't be there because -moz-appearance takes care of that.

MozReview-Commit-ID: LbqKADfO3tf

UltraBlame original commit: 568b366e806cfaddd34f72a334b2fcea8232a982

--- a/toolkit/themes/linux/global/listbox.css
+++ b/toolkit/themes/linux/global/listbox.css
@@ -40,59 +40,6 @@ margin
 2px
 4px
 ;
-border
-:
-2px
-solid
-;
--
-moz
--
-border
--
-top
--
-colors
-:
-ThreeDShadow
-ThreeDDarkShadow
-;
--
-moz
--
-border
--
-right
--
-colors
-:
-ThreeDHighlight
-ThreeDLightShadow
-;
--
-moz
--
-border
--
-bottom
--
-colors
-:
-ThreeDHighlight
-ThreeDLightShadow
-;
--
-moz
--
-border
--
-left
--
-colors
-:
-ThreeDShadow
-ThreeDDarkShadow
-;
 background
 -
 color
@@ -122,15 +69,6 @@ true
 color
 :
 GrayText
-;
-}
-listitem
-{
-border
-:
-1px
-solid
-transparent
 ;
 }
 listbox
@@ -256,59 +194,6 @@ align
 :
 center
 ;
-border
-:
-2px
-solid
-;
--
-moz
--
-border
--
-top
--
-colors
-:
-ThreeDHighlight
-ThreeDLightShadow
-;
--
-moz
--
-border
--
-right
--
-colors
-:
-ThreeDDarkShadow
-ThreeDShadow
-;
--
-moz
--
-border
--
-bottom
--
-colors
-:
-ThreeDDarkShadow
-ThreeDShadow
-;
--
-moz
--
-border
--
-left
--
-colors
-:
-ThreeDHighlight
-ThreeDLightShadow
-;
 background
 -
 color
@@ -325,128 +210,6 @@ moz
 -
 DialogText
 ;
-padding
-:
-0
-2px
-;
-}
-listheader
-:
-hover
-{
-color
-:
--
-moz
--
-buttonhovertext
-;
-}
-listheader
-[
-sortable
-=
-"
-true
-"
-]
-:
-hover
-:
-active
-{
-color
-:
-ButtonText
-;
-border
-:
-2px
-solid
-;
--
-moz
--
-border
--
-top
--
-colors
-:
-ThreeDShadow
--
-moz
--
-Dialog
-;
--
-moz
--
-border
--
-right
--
-colors
-:
-ThreeDShadow
-transparent
-;
--
-moz
--
-border
--
-bottom
--
-colors
-:
-ThreeDShadow
-transparent
-;
--
-moz
--
-border
--
-left
--
-colors
-:
-ThreeDShadow
--
-moz
--
-Dialog
-;
-padding
--
-top
-:
-0px
-;
-padding
--
-bottom
-:
-0px
-;
-padding
--
-inline
--
-start
-:
-3px
-;
-padding
--
-inline
--
-end
-:
-1px
-;
 }
 .
 listheader
@@ -460,31 +223,6 @@ inline
 end
 :
 2px
-;
-}
-.
-listheader
--
-icon
-[
-sortable
-=
-"
-true
-"
-]
-:
-hover
-:
-active
-{
-margin
--
-inline
--
-end
-:
-1px
 ;
 }
 .
@@ -494,7 +232,7 @@ label
 {
 margin
 :
-0px
+0
 !
 important
 ;
@@ -519,7 +257,7 @@ label
 {
 margin
 :
-0px
+0
 !
 important
 ;
@@ -527,7 +265,7 @@ padding
 -
 top
 :
-0px
+0
 ;
 padding
 -
@@ -549,7 +287,7 @@ inline
 -
 end
 :
-0px
+0
 ;
 white
 -
@@ -612,17 +350,8 @@ center
 ;
 margin
 :
-0px
+0
 2px
-;
-border
-:
-1px
-solid
--
-moz
--
-DialogText
 ;
 min
 -
@@ -635,19 +364,5 @@ min
 height
 :
 13px
-;
-background
-:
--
-moz
--
-Field
-no
--
-repeat
-50
-%
-50
-%
 ;
 }
